Fix messages getting too wide

--- a/pages/table.module.css
+++ b/pages/table.module.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: column;
   border-left: 1px solid var(--color-orange);
+  flex: 1;
 }
 
 .messages {
